--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <button id="theme-toggle">Toggle Dark Mode</button> <!-- 🌓 Theme toggle -->
+  
   <div class="calculator">
     <input type="text" id="display" disabled />
     <div class="buttons">
