--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <button id="theme-toggle">Toggle Dark Mode</button> <!-- 🌓 Theme toggle -->
-  
+  <!-- Outside the calculator box -->
+  <button id="theme-toggle">Toggle Dark Mode</button>
+
   <div class="calculator">
     <input type="text" id="display" disabled />
     <div class="buttons">
