added some text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <h1>Welcome to the Simple Calculator</h1>
+<p>Perform basic arithmetic operations easily.</p>
   <!-- Outside the calculator box -->
   <button id="theme-toggle">Toggle Dark Mode</button>
 
