--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simple Calculator</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Welcome to the Simple Calculator</h1>
-<p>Perform basic arithmetic operations easily.</p>
-  <!-- Outside the calculator box -->
+  <p>Perform basic arithmetic operations easily.</p>
+
+  <!-- Theme toggle -->
   <button id="theme-toggle">Toggle Dark Mode</button>
 
+  <!-- Calculator -->
   <div class="calculator">
-    <input type="text" id="display" disabled />
+    <input type="text" id="display" readonly />
     <div class="buttons">
       <button>7</button><button>8</button><button>9</button><button>/</button>
       <button>4</button><button>5</button><button>6</button><button>*</button>
       <button>1</button><button>2</button><button>3</button><button>-</button>
-      <button>0</button><button>C</button><button>=</button><button>+</button>
+      <button class="double-width">0</button><button>C</button><button>=</button><button>+</button>
     </div>
   </div>
 
